--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,11 @@
     <div class="form-heading">アカウント編集</div>
     <div class="form users-form">
       <div class="form-body">
-
+      <% if @error_message %>
+        <div class="form-error">
+	        <%= @error_message %>
+		    </div>
+		  <% end %>
         <% @user.errors.full_messages.each do |message| %>
 	        <div class="form-error">
 		        <%= message %>
